--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "SET NODE_ENV=dev&& node server.js",
     "test": "mocha"
   },
   "repository": {
@@ -20,5 +21,12 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "config": "^3.3.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.3",
+    "mongoose-paginate": "^5.0.3"
   }
 }
