--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=dev&& node server.js",
+    "start": "nodemon server.js",
     "test": "mocha"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ali-zali-dev/test-in-js-example#readme",
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "mocha": "^10.0.0"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "config": "^3.3.8",
     "express": "^4.18.1",
     "mongoose": "^6.6.3",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose-paginate": "^5.0.3",
+    "nodemon": "^2.0.20"
   }
 }
